Fix X-mark on mobile

--- a/src/views/HomeView/index.scss
+++ b/src/views/HomeView/index.scss
@@ -44,6 +44,12 @@
       background-repeat: no-repeat;
       background-position: center;
       opacity: 0.5;
+
+      @media screen and (max-width: 720px) {
+        width: 115px;
+        height: 60px;
+        left: 50px;
+      }
     }
   }
 }
